[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/New Piskel (86).png" type="Texture" id=1]
[ext_resource path="res://Player1.gd" type="Script" id=2]
[ext_resource path="res://P1DeathLaser.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 63.0079

[node name="Player1" type="RigidBody2D"]
collision_layer = 69633
collision_mask = 69633
physics_material_override = SubResource( 1 )
linear_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="WTimer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 30, 0 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -40, 0 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -12, 0 )

[node name="ITimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="P1DeathLaser" parent="." instance=ExtResource( 3 )]
position = Vector2( 13, 0 )
LaserColor = Color( 0, 0.694118, 1, 1 )

[node name="GigaGravity" type="Area2D" parent="."]
position = Vector2( 400, 0 )
collision_layer = 131072
collision_mask = 131072
space_override = 1
gravity_point = true
gravity = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GigaGravity"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="GigaGravity"]
